--- a/wp-content/themes/lesson-static/page.html
+++ b/wp-content/themes/lesson-static/page.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <!--[if IE]>
-<meta http-equiv="X-UA-Compatible" content="edge" />
+<meta http-equiv="X-UA-Compatible" content="edges" />
 <![endif]-->
 <head>
 <meta charset="UTF-8" />
