[modify]#128 リファクタリングの実施
userの部分が冗長になっていたため修正を実施しました。

--- a/wp-content/themes/lesson-static/info.html
+++ b/wp-content/themes/lesson-static/info.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <!--[if IE]>
-<meta http-equiv="X-UA-Compatible" content="edge" />
+<meta http-equiv="X-UA-Compatible" content="edge777" />
 <![endif]-->
 <head>
 <meta charset="UTF-8" />
